Tilføjet toolbar til highscore og help activities. Tilføjet billede til won activity, samt at man ender der når man vinder

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".HelpActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".WonActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
