Tilføjet antal forsøg til vinder. Tilføjet billede samt hvilket ord der var det rigtige til taber. Tilføjet listview til highscore

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".WonActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".LostActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
